Damage Pipeline changes (#6295)